fix alignment for home social icons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,7 @@ a[class="nav-link"] {
 
 .social-links-home {
     position: absolute;
-    bottom: 0
+    bottom: 4vh
 }
 
 .social-links a {
